--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lucide-react": "^0.563.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
